src/game/aa
Gfx.java:709: error: illegal start of expression
					if (c < ASCII_LETTERSTART) goto skip_cont;
					                           ^
Gfx.java:709: error: not a statement
					if (c < ASCII_LETTERSTART) goto skip_cont;
					                                ^
Gfx.java:721: error: illegal start of expression
				if (x >= dpi.left + dpi.width) goto skip_char;
				                               ^
Gfx.java:721: error: not a statement
				if (x >= dpi.left + dpi.width) goto skip_char;
				                                    ^
Gfx.java:734: error: illegal start of expression
				goto check_bounds;
				^
Gfx.java:734: error: not a statement
				goto check_bounds;
				     ^
Gfx.java:737: error: illegal start of expression
				goto switch_color;
				^
Gfx.java:737: error: not a statement
				goto switch_color;
				     ^
Gfx.java:1754: error: illegal start of expression
		if (memcmp(old_val, &_cur_palette[217], c * sizeof(*old_val)) != 0) {
		                    ^
Gfx.java:1754: error: illegal start of expression
		if (memcmp(old_val, &_cur_palette[217], c * sizeof(*old_val)) != 0) {
		                                                   ^
Gfx.java:1918: error: illegal start of expression
				if (*b != 0) {
				    ^
Gfx.java:1923: error: not a statement
					byte *p = b;
					^
Gfx.java:1923: error: ';' expected
					byte *p = b;
					    ^
Gfx.java:1928: error: illegal start of expression
						*p = 0;
						^
Gfx.java:1931: error: illegal start of expression
					} while (bottom != h && *p != 0);
					                        ^
Gfx.java:1939: error: not a statement
						byte *p2 = ++p;
						^
Gfx.java:1939: error: ';' expected
						byte *p2 = ++p;
						    ^
Gfx.java:1943: error: illegal start of expression
							if (!*p2) goto no_more_coalesc;
							     ^
Gfx.java:1943: error: illegal start of expression
							if (!*p2) goto no_more_coalesc;
							          ^
Gfx.java:1943: error: not a statement
							if (!*p2) goto no_more_coalesc;
							               ^
Gfx.java:1954: error: illegal start of expression
							*p2 = 0;
							^
Gfx.java:1973: error: ')' expected
			} while (b++, (x += 64) != w);
			            ^
Gfx.java:1973: error: not a statement
			} while (b++, (x += 64) != w);
			                        ^
Gfx.java:1973: error: ';' expected
			} while (b++, (x += 64) != w);
			                            ^
Gfx.java:1974: error: ')' expected
		} while (b += -(w >> 6) + DIRTY_BYTES_PER_LINE, (y += 8) != h);
		                                              ^
Gfx.java:1974: error: not a statement
		} while (b += -(w >> 6) + DIRTY_BYTES_PER_LINE, (y += 8) != h);
		                                                         ^
Gfx.java:1974: error: ';' expected
		} while (b += -(w >> 6) + DIRTY_BYTES_PER_LINE, (y += 8) != h);
		                                                             ^
27 errors
